# simple-anti-scam-bot

./: Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
